Add advert workflow

--- a/monolith/client/src/app/component/header/header.component.html
+++ b/monolith/client/src/app/component/header/header.component.html
@@ -13,6 +13,7 @@
       <button *ngIf="!hasSignedIn()" mat-button mat-ripple routerLink="/login">
         <span>Login</span>
       </button>
+      <button class="greeting-button" routerLink="/advert" mat-button> dugme za advert </button>
       <button
         *ngIf="hasSignedIn()"
         [matMenuTriggerFor]="accountMenu"
