--- a/monolith/server/.settings/org.eclipse.wst.common.component
+++ b/monolith/server/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-<<<<<<< HEAD:monolith-bsep/server/.settings/org.eclipse.wst.common.component
-    <wb-module deploy-name="monolith-agency">
-        <wb-resource deploy-path="/" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
-=======
-    <wb-module deploy-name="project">
-        <wb-resource deploy-path="/" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/" source-path="/src/test/java"/>
->>>>>>> parent of 888c5e94... Divided monoliths:monolith/server/.settings/org.eclipse.wst.common.component
+    <wb-module deploy-name="spring-security-example-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+        <property name="context-root" value="spring-security-example"/>
+        <property name="java-output-path" value="/spring-security-example/target/classes"/>
     </wb-module>
 </project-modules>
