--- a/monolith/client/src/app/app.component.html
+++ b/monolith/client/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
+
+<mat-tab-group animationDuration="0ms">
+  <mat-tab label="Oglasi" > <app-advert></app-advert></mat-tab>
+  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="Third">Content 3</mat-tab>
+</mat-tab-group>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
