--- a/monolith/client/src/app/component/advert/advert.component.html
+++ b/monolith/client/src/app/component/advert/advert.component.html
@@ -1,2 +1,7 @@
 
 <h1>Jackdaws love my big sphinx of quartz.</h1>
+<div *ngFor="let ad of usersAdverts" >
+    {{ad}}
+    *<mat-card>{{ad.id}}# {{ad}}</mat-card>
+</div>
+Endofline
