--- a/monolith/client/src/app/component/advert/advert.component.html
+++ b/monolith/client/src/app/component/advert/advert.component.html
@@ -1,7 +1,9 @@
 
 <h1>Jackdaws love my big sphinx of quartz.</h1>
+
 <div *ngFor="let ad of usersAdverts" >
-    {{ad}}
-    *<mat-card>{{ad.id}}# {{ad}}</mat-card>
+    <mat-card>{{ad.id}}# {{ad.title}}</mat-card>
 </div>
-Endofline
+<div *ngIf="me">
+
+</div>
