--- a/monolith/client/src/app/home/home.component.html
+++ b/monolith/client/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<div class="content" fxLayout="row" fxLayoutAlign="center none">
- 
-</div>
+<mat-tab-group animationDuration="0ms">
+  <mat-tab label="Oglasi" > <app-advert></app-advert></mat-tab>
+  <mat-tab label="Cenovnici"><app-pricelist></app-pricelist></mat-tab>
+  <mat-tab label="Poruke"><app-inbox></app-inbox></mat-tab>
+  <mat-tab label="Profil"><app-user-profile></app-user-profile></mat-tab>
+</mat-tab-group> 
