--- a/monolith/client/src/app/home/home.component.html
+++ b/monolith/client/src/app/home/home.component.html
@@ -3,4 +3,5 @@
   <mat-tab label="Cenovnici"><app-pricelist></app-pricelist></mat-tab>
   <mat-tab label="Poruke"><app-inbox></app-inbox></mat-tab>
   <mat-tab label="Profil"><app-user-profile></app-user-profile></mat-tab>
+  <mat-tab *ngIf = "ifAdmin()" label="Sifrarnici" ><app-code-book></app-code-book></mat-tab>
 </mat-tab-group> 
