--- a/monolith/client/src/app/code-book/code-book.component.html
+++ b/monolith/client/src/app/code-book/code-book.component.html
@@ -1,9 +1,14 @@
 
+<div fxLayout="row" fxLayoutAlign="space-around center" *ngIf='codes'>
 <mat-list role="list">
   <h2>Sifrarnik za goriva</h2>
   <div *ngFor="let fuel of codes.fuels">
     {{fuel.title}}
   </div>
+  <mat-divider></mat-divider>
+  <input>
+  <button (click)='addFuelType()' aria-label="Example icon button with a plus one icon">+</button>
+  
 </mat-list>
 
 <mat-list role="list">
@@ -11,6 +16,9 @@
   <div *ngFor="let model of codes.models">
     {{model.title}}
   </div>
+  <mat-divider></mat-divider>
+  <input>
+  <button  aria-label="Example icon button with a plus one icon">+</button>
 </mat-list>
 
 <mat-list role="list">
@@ -18,4 +26,19 @@
   <div *ngFor="let manu of codes.manufacturers">
     {{manu.title}}
   </div>
+  <mat-divider></mat-divider>
+  <input>
+  <button  aria-label="Example icon button with a plus one icon">+</button>
 </mat-list>
+
+<mat-list role="list">
+  <h2>Sifrarnik za gradove</h2>
+  
+  <div *ngFor="let manu of codes.cities">
+    {{manu.title}}
+  </div>
+  <mat-divider></mat-divider>
+  <input>
+  <button  aria-label="Example icon button with a plus one icon">+</button>
+</mat-list>
+</div>
