--- a/monolith/client/src/app/rent-a-car-adverts/rent-a-car-adverts.component.html
+++ b/monolith/client/src/app/rent-a-car-adverts/rent-a-car-adverts.component.html
@@ -1,4 +1,8 @@
-<p>
+<div>
   <app-search-adverts-bar></app-search-adverts-bar>
-  Neki autici
-</p>
+  <div fxLayout="row" fxLayoutAlign="start center" class="adverts-panel">
+    <div *ngFor="let advert of advertList">
+      <app-advert-card [advert]='advert' [myAd] = 'false'></app-advert-card>
+    </div>
+  </div>
+</div>
