--- a/monolith/client/src/app/search-adverts-bar/search-adverts-bar.component.html
+++ b/monolith/client/src/app/search-adverts-bar/search-adverts-bar.component.html
@@ -1,13 +1,15 @@
 <mat-card>
   <mat-card-title> Nadji oglas:</mat-card-title>
   <mat-card-content>
-    <form class="search-form">
+    <form  (ngSubmit)="(submitSearchForm())" class="search-form">
      <mat-form-field>
         <mat-label>Mesto oglasa:</mat-label>
-        <mat-select [formControl]="cityList" multiple>         
+        <mat-select [formControl]="cityList" [(value)]="selected" multiple>         
           <mat-option *ngFor="let city of cities" [value]="city">{{city.title}}</mat-option>
         </mat-select>
       </mat-form-field>
+  <button mat-button type="submit">Trazi</button>    
+      
     
     </form>
     
